--- a/src/templates/contest/problem/problem.html
+++ b/src/templates/contest/problem/problem.html
@@ -163,7 +163,7 @@
                     </a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
                 <br><a href="{{ request.path }}/download">Download problem</a>
-                {% if data["status"] == 1 %}
+                {% if data["show_publish_btn"] %}
                     <br><a href="#" id="btn-publish" onclick="">
                             Publish problem
                         </a>
@@ -201,7 +201,7 @@
         document.getElementById("hint").classList.toggle("hidden");
     });
 </script>
-{% if data["status"] == 1 %}
+{% if data["show_publish_btn"] %}
     <script>
         document.getElementById("btn-publish").addEventListener("click", function() {
             document.getElementById("confirm").style.display = "block";
