--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -108,6 +108,6 @@
         <script src="/assets/js/seeMore.js"></script>
         <script src="/assets/js/newPagination.js"></script>
         <script src="/assets/js/dateConvert.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     </body>
 </html>
