--- a/src/templates/privacy.html
+++ b/src/templates/privacy.html
@@ -17,4 +17,8 @@
     industry-standard security practices, and will only analyze your data to investigate errors or 
     abuse. We will never sell or give away your data.
 </p>
+<p>
+    We do not track your data through trackers like Google Analytics. We also do not deploy any cookies,
+    except for those that are required for site functionality (such as keeping you logged in).
+</p>
 {% endblock %}
